# PythonIntegration

./: CMakeLists.txt
BoostPython/01_HelloWorld/: CMakeLists.txt  HelloWorld.cpp
BoostPython/03_ComplexNumber/: test.py
BoostPython/04_ClassInheritance/: test.py
BoostPython/06_embedding/: CMakeLists.txt  main.cpp  test_foo.py
BoostPython/06_overloading/: CMakeLists.txt  Overloading.cpp  test.py
BoostPython/CallPolicy/: CMakeLists.txt  CallPolicy.cpp  test.py
BoostPython/ClassInheritance/: CMakeLists.txt  InheritanceObject.cpp
BoostPython/ComplexNumber/: CMakeLists.txt  ComplexNumber.cpp
BoostPython/HelloWorld/: test.py
BoostPython/SimpleClass/: CMakeLists.txt  SimpleClass.cpp  test.py
CPython/: CMakeLists.txt  cpyton_example.py  simple_library.h
PyBind/01_HelloWorld/: CMakeLists.txt  HelloWorld.cpp  test.py
PyBind/02_SimpleClass/: CMakeLists.txt  SimpleClass.cpp  test.py
PyBind/03_ComplexNumber/: CMakeLists.txt  ComplexNumber.cpp  test.py
PyBind/04_ClassInheritance/: CMakeLists.txt  InheritanceObject.cpp  test.py
PyBind/05_CallPolicy/: CMakeLists.txt  CallPolicy.cpp  test.py
PyBind/06_overloading/: CMakeLists.txt  Overloading.cpp  test.py
PyBind/07_exception/: CMakeLists.txt  ExceptionHandling.cpp  test.py
PyBind/08_embedding/: CMakeLists.txt  main.cpp
libpython/libpython_embedding/: CMakeLists.txt  main.cpp  test_module.py
libpython/libpython_simple/: CMakeLists.txt  setup.py  simple_library.cpp  simple_library.h  simple_wrapper.cpp  test.py
